feature/ added new buiild v.1.0

--- a/src/pages/page/page.pug
+++ b/src/pages/page/page.pug
@@ -8,7 +8,7 @@ block content
 	include ../../pug/modules/header-module
 	section.banner
 		.wrapper
-			h1.page__title-h1 Title h1
+			h1.page__title-h1 Page 2
 			a(href="../").page__text index
 block append style
 
