--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,7 +7,7 @@ block content
 	main.page
 		section.banner
 			.wrapper
-				h1.page__title-h1 Title h1
+				h1.page__title-h1 Title h1 Index
 				p.page__text Any textp
 				a(href="page/page.html").page__text page     
 block append style
