feature/ added new build v.1.0

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,7 +3,8 @@ block title
 	title Title Pages
 block append style
 block content
-	include ../pug/modules/header-module
+	//- include ../pug/modules/header-module
+	include ../components/header/header.component.pug
 	main.page
 		section.banner
 			.wrapper
