--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1,3 +1,8 @@
+/* __debugGrid__ */
+.debugGrid
+    @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0)
+    @include debugBtn()
+/* __debugGrid__ */
 .header
     .parent
         +row-flex()
