--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -24,5 +24,5 @@ html(lang="ru")
             //- link(rel="stylesheet", href="css/styles-percent.css", type="text/css") for opera
 
         block script
-            script(src="libs/js/_all/debug-grid-create.js")
+            //- script(src="libs/js/_all/debug-grid-create.js")
             script(src="js/main.js")
