feature/ added new build v.1.0

--- a/src/pug/modules/header-module.pug
+++ b/src/pug/modules/header-module.pug
@@ -1,2 +1,2 @@
-include ../blocks/debuggrid
-include ../blocks/header
+include ../../components/debuggrid/debuggrid.component.pug
+include ../../components/header/header.component.pug
