--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,6 +5,7 @@ block append style
 block content
 	include ../components/debuggrid/debuggrid.component.pug
 	include ../components/header/header.component.pug
+	include ../components/somecomponent/some.component.pug
 	main.page
 		section.banner
 			.wrapper
@@ -16,3 +17,4 @@ block append style
 block append script
 	script(src="/js/debuggrid/debuggrid.component.js")
 	script(src="/js/header/header.component.js")
+	script(src="/js/somecomponent/some.component.js")
