feature/ added new build v.1.0

--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1,5 +1,9 @@
-/*excomponent*/
-.someComponent
+/* __debugGrid__ */
+.debugGrid
+    @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0)
+    @include debugBtn()
+/* __debugGrid__ */
+/*some*/
 .header
     .parent
         +row-flex()
@@ -21,8 +25,3 @@
                 font-size: 60px
                 width: 768px
                 margin: 3px 4px 3px
-/* __debugGrid__ */
-.debugGrid
-    @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0)
-    @include debugBtn()
-/* __debugGrid__ */
