--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,7 +5,7 @@ block append style
 block content
 	include ../components/debuggrid/debuggrid.component.pug
 	include ../components/header/header.component.pug
-	include ../components/somecomponent/some.component.pug
+	include ../components/some/some.component.pug
 	main.page
 		section.banner
 			.wrapper
