--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -3,7 +3,6 @@
     @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0)
     @include debugBtn()
 /* __debugGrid__ */
-/*some*/
 .header
     .parent
         +row-flex()
@@ -25,3 +24,5 @@
                 font-size: 60px
                 width: 768px
                 margin: 3px 4px 3px
+/*some*/
+/*some2*/
