--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -11,10 +11,9 @@ block content
 			.wrapper
 				h1.page__title-h1 Title h1 Index
 				p.page__text Any textp
-				a(href="page/page.html").page__text page 
+				a(href="page/page.html").page__text page2
 block append style
 	
 block append script
 	script(src="/js/debuggrid/debuggrid.component.js")
 	script(src="/js/header/header.component.js")
-	script(src="/js/somecomponent/some.component.js")
