--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -11,19 +11,26 @@ html(lang="ru")
         block style
             link(rel="stylesheet", href="css/base-styles.css", type="text/css")
         block socialMetaTags
+
             meta(property="fb:app_id" content="")
+            meta(property="og:locale", content="en_US")
+            meta(property="og:type", content="website")
+            meta(property="og:site_name", content="Ilia Gromov")
+
             meta(property="og:title", content="Ilia Gromov")
             meta(property="og:description", content="Frontend developer. Разработаю Вашу идею на профессиональном уровне!")
-            meta(property="og:type", content="website")
             meta(property="og:url", content="https://iliagromov.github.io/")
+           
             meta(property="og:image", content="https://iliagromov.github.io/assets/img/img-about-2.jpg")
             meta(property="vk:image", content="https://iliagromov.github.io/assets/img/img-about-2-vk.jpg")
             meta(property="fb:image", content="https://iliagromov.github.io/assets/img/img-about-4.jpg")
             meta(property="twitter:image", content="https://iliagromov.github.io/assets/img/img-about-3.jpg")
+            
             meta(property="og:image:secure_url", content="https://iliagromov.github.io/assets/img/img-about-2.jpg")
             meta(property="og:image:type", content="image/jpeg")
             meta(property="og:image:width", content="500")
             meta(property="og:image:height", content="300")
+
             meta(property="twitter:card", content="summary")
             meta(property="twitter:site", content="https://iliagromov.github.io/")
             meta(property="twitter:description", content="")
