feature/ fix debug

--- a/src/components/debuggrid/debuggrid.component.sass
+++ b/src/components/debuggrid/debuggrid.component.sass
@@ -1,5 +1,23 @@
 /* __debugGrid__ */
 .debugGrid
-    @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0)
+    height: 100vh
+    position: fixed
+    width: 100%
+    
+    .wrapper
+        height: inherit
+        
+    .parentFlex
+        height: inherit
+        +row-flex()
+            
+    .childFlex
+        +col()
+        +size(1)
+        +size-md(1)
+        +size-lg(1)
+        height: inherit
+        outline:  1px solid #ff0
+        background: rgba(0, 0, 0, 0.4)
     @include debugBtn()
 /* __debugGrid__ */
