--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -4,7 +4,7 @@ html(lang="ru")
         meta(charset="utf-8")
         meta(http-equiv="x-ua-compatible", content="ie=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        meta(name="author" content="Ilia Gromov")
+        meta(name="author" content="tg@gromov_ilia")
         link(rel="icon", type="image/x-icon",  href="assets/img/favicon.ico")
         block base
         block title
