--- a/src/sass/variables/variables.sass
+++ b/src/sass/variables/variables.sass
@@ -1,12 +1,11 @@
-$_def: 320
-$_xs: 576
-$_sm: 768
-$_md: 960
-$_mmd: 1024
-$_lg: 1500
-$_lgmax: 1920
-    
+
 $color_white: #ffffff
 $color_black: #000
-$color_scrollbar-track: $color_white
-$color_scrollbar-thumb: #cccccc
+
+$color_Light-Blue: #E4E8F6
+$color_Cyan: #0BBBEF
+$color_Cyan-2: #20CBFD
+$color_Cyan-3: #0CABDA
+
+$color_scrollbar-track: $color_Light-Blue
+$color_scrollbar-thumb: $color_Cyan
