--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -41,12 +41,12 @@ html(lang="ru")
         
         block content
         block style
-            link(rel="stylesheet", href="css/viewport/mobileFirst-"+viewportWidth+"px.css", type="text/css")
-            link(rel="stylesheet", href="css/styles-sprites.css", type="text/css")
-            each breakPoint in breakPoints
-                link(rel="stylesheet", type="text/css" , media="screen and (min-width:"+breakPoint.width+"px)",  href="css/viewport/media/"+breakPoint.width+"/"+breakPoint.width+"px.css")
-	
-            //- link(rel="stylesheet", href="css/styles-calc.css", type="text/css") // if you want use old style programming
+            //- link(rel="stylesheet", href="css/viewport/mobileFirst-"+viewportWidth+"px.css", type="text/css")
 
+            link(rel="stylesheet", href="css/styles-calc.css", type="text/css")
+            link(rel="stylesheet", href="css/styles-sprites.css", type="text/css")
+            //- each breakPoint in breakPoints
+            //-     link(rel="stylesheet", type="text/css" , media="screen and (min-width:"+breakPoint.width+"px)",  href="css/viewport/media/"+breakPoint.width+"/"+breakPoint.width+"px.css")
+        
         block script
             script(src="js/main.js")
